# hello-world-tempest-plugin

./: README.md  README.rst  setup.cfg
hello_world_tempest_plugin/: config.py  plugin.py
hello_world_tempest_plugin/tests/api/: base.py  test_hello_world.py
