[metadata]
name = hello-world-tempest-plugin
version = 0.0.1
summary = Basic Tempest's plugin with a hello world test case
description-file = README.rst
author = Marcela Bonell
author-email: hi@mbonell.com
home-page = https://github.com/MBonell/hello-world-tempest-plugin
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: OpenStack Development Team
    Intended Audience :: OpenStack QA Team
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: Linux
    Natural Language :: English
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
keywords =
    Plugin
    Tempest
    OpenStack

[entry_points]
tempest.test_plugins =
    hello-world-tempest-plugin = hello_world_tempest_plugin.plugin:MyPlugin

[pbr]
warnerrors = true
